styles.css
/* ... */
.pokemon-infos {
  grid-column: 2 / 3;
  grid-row: 1 / 2;
  display: grid;
  grid-template-rows: 15px auto 1fr auto 15px;
}

.pokemon-infos__nom {
  grid-row: 2 / 3;
  display: grid;
  grid-template-rows: 32px auto;
  grid-template-columns: 32px auto;
  position: relative;
  left: -16px;
}

.pokemon-ball {
  grid-row: 1 / 2;
  grid-column: 1 / 2;
  transition: all .2s var(--easing-decelerate);
  transform: translate(0) rotate(0);
}

pokemon-card[open] .pokemon-ball {
  transition: all .11s var(--easing-accelerate);
  transform: translate(15px) rotate(120deg);
}

.pokemon-espece {
  grid-row: 2 / 3;
  grid-column: 2 / 3;
  font-size: 15px;
  font-weight: 300;
  text-transform: capitalize;
  opacity: .8;
  display: flex;
  justify-content: start;
  align-items: center;
  position: relative;
  left: 25px;
  top: -6px;
}

.pokemon-surnom,
.no-surnom>.pokemon-espece {
  grid-row: 1 / 2;
  grid-column: 2 / 3;
  font-size: 24px;
  font-weight: 300;
  opacity: 1;
  display: flex;
  justify-content: start;
  align-items: center;
  text-shadow: 1px 1px var(--card-bg-color);
  position: relative;
  left: 0;
  top: 0;
}

.no-surnom>.pokemon-surnom {
  display: none;
}

.pokemon-infos__capture {
  grid-row: 4 / 5;
  color: var(--card-infos-text-color);
  font-size: 13px;
  display: grid;
  grid-template-areas:
      "icone methode compteur"
      "icone date compteur";
  grid-template-columns: 32px auto 1fr;
  grid-template-rows: 1fr 1fr;
  gap: 0 5px;
  margin-left: 15px;
}

.pokemon-infos__capture.no-date {
  grid-template-rows: 1fr 0;
}

.pokemon-infos__capture>.icones.jeu {
	grid-area: icone;
}
.pokemon-infos__capture>.capture-methode {
  grid-area: methode;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  display: flex;
  align-items: center;
}
.pokemon-infos__capture>.capture-date {
  grid-area: date;
  display: flex;
  align-items: center;
}
.pokemon-infos__capture>.methode-compteur {
  grid-area: compteur;
  align-self: start;
}
.methode-compteur>.oeuf {
  transform: translateY(2px);
}
.pokemon-infos__capture>.gigamax {
  grid-area: compteur;
  align-self: center;
}

.pokemon-icones {
  grid-column: 3 / 4;
  grid-row: 1 / 2;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: flex-end;
  margin: 10px;
}

.pokemon-notes {
  grid-row: 1 / 2;
  grid-column: 2 / 4;
  box-sizing: border-box;
  display: flex;
  width: 100%;
  height: 100%;
  font-size: 13px;
  text-align: justify;
  line-height: 20px;
  color: var(--text-color);
  background-color: var(--card-bg-color);
  padding: 10px;
  z-index: 4;
  opacity: 0;
  transform: translate3d(100px, 0, 0);
  pointer-events: none;
  transition: all .1s var(--easing-accelerate);
  overflow: hidden;
}
pokemon-card[open]>.pokemon-notes {
  opacity: 1;
  transform: translate3d(0, 0, 0);
  transition: all .1s var(--easing-decelerate);
}

.pokemon-notes__texte {
  margin: auto;
}

.filtered,
section:not(.defered) .defer,
.off,
.icones.explain.off {
  display: none;
}

@keyframes start-card {
  0% { opacity: 0; transform: translate3D(0, 120px, 0); }
  100% { opacity: 1; transform: translate3D(0, 0, 0); }
}

#mes-chromatiques.start .pokemon-card:not(.defer) {
  animation: start-card .8s var(--easing-decelerate);
  animation-fill-mode: backwards;
  animation-delay: calc(var(--order) * .08s + .2s);
}



/* Icônes */

.icones.explain.oeuf {
  margin: 0;
}



/* Shiny rate */

.shiny-rate {
  display: grid;
  grid-template-columns: auto;
  grid-template-rows: 20px;
  gap: 4px;
  padding: 2px 8px;
  border-radius: 20px;
  position: relative;
  --hue-min: 30;
  --hue-max: 170;
  background: hsl(calc(var(--hue-min) + var(--coeff) * (var(--hue-max) - var(--hue-min))), 50%, 50%);
}
.full-odds {
  background: repeating-linear-gradient(-45deg, 
    hsl(2,80%,50%) 0, 
    hsl(24,100%,50%) 5px, 
    hsl(39,100%,50%) 10px, 
    hsl(70,100%,50%) 15px, 
    hsl(158,100%,50%) 20px, 
    hsl(230,70%,50%) 25px, 
    hsl(252,100%,70%) 30px, 
    hsl(2,80%,50%) 35px
  );
}
.charm-odds {
  background: repeating-linear-gradient(-45deg, 
    mediumslateblue 0, 
    cyan 5px, 
    white 10px, 
    cyan 15px, 
    mediumslateblue 20px
  );
}
.one-odds {
  background: white;
}
.shiny-rate::before {
  content: '';
  display: block;
  position: absolute;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
  background-color: var(--card-bg-color);
  opacity: 1;
  top: 2px;
  left: 2px;
  border-radius: 20px;
}
.shiny-rate.with-charm {
  grid-template-columns: 13px auto;
}
.shiny-rate>div {
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
}
.shiny-rate:not(.with-charm)>.shiny-charm {
  display: none;
}
.shiny-charm {
  grid-row: 1 / 2;
  grid-column: 1 / 2;
}
.shiny-charm>.charm {
  top: -2px;
  position: relative;
  margin-left: -6px !important; /* Compense le placement décrit dans iconsheet.css */
  margin-right: -3px !important;
}
.shiny-rate-text {
  color: var(--card_supporting_text_color);
  font-size: 13px;
}
.numerator.shiny-rate-text {
  font-size: 8px;
  position: absolute;
  top: 0;
  left: 0;
}
.separator.shiny-rate-text {
  opacity: .6;
  margin: 0 1px 0 3px;
  font-size: 16px;
}



.defer-loader {
  border: 1px solid var(--card-bg-color);
  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  order: 999999999;
  margin: 0 0 6px;
  padding: 6px;
  color: var(--text-color-soft);
}

.defer-loader>load-spinner {
  --size: 2em;
}

#chasses-en-cours .defer-loader {
  order: -1;
}

.defered .defer-loader {
  display: none;
}



.vide {
  height: 100%;
}

#mes-chromatiques.vide>.section-contenu {
  padding-bottom: 0;
  height: 100%;
}

.message-vide {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr min-content min-content 1fr;
  font-size: 18px;
  color: var(--radio-off-color);
  flex-grow: 1;
  text-align: center;
  width: 60%;
  gap: 8px;
  align-self: center;
  justify-self: center;
}
/* ... */

